--- a/frontend/src/styles/post.css
+++ b/frontend/src/styles/post.css
@@ -1,10 +1,9 @@
 /* blog post  */
 .blogPostContainer{
-    /* background-color: yellow; */
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 100px 30%;
+    padding: 60px 30%;
 }
 
 .blogPostContainer h1{
